Fix Wrap + Make Larger

--- a/src/styles/SocialCards.module.css
+++ b/src/styles/SocialCards.module.css
@@ -1,7 +1,7 @@
 .cards {
     display: flex;
-    flex-direction: row;
     gap: 1.5rem;
     justify-content: center;
     margin-top: 2rem;
+    flex-wrap: wrap;
 }
