--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,7 @@ body {
 }
 
 main {
-    width: 50vw;
+    width: 60vw;
     background: #fff;
     padding: 2rem;
     height:min-content;
